--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -4,27 +4,31 @@
 }
 
 
-body, html{
+body,
+html {
     background-color: #F6F4E4;
     height: 100%;
     font-family: 'Roboto', sans-serif;
     position: relative;
 }
-header{
+
+header {
     height: 10%;
     background-color: #41AFA4;
     color: white;
 }
-.logoBloc{
+
+.logoBloc {
     width: 10%;
 }
-.navBtnMob{
+
+.navBtnMob {
     background-color: #4F3B8A;
     border-radius: 20px;
     padding: 20px;
 }
 
-footer{
+footer {
     margin-top: 50px;
     position: relative;
     bottom: 0;
@@ -33,7 +37,7 @@ footer{
     background-color: #41AFA4;
 }
 
-.resumeBloc{
+.resumeBloc {
     background-color: #B6A9DA;
     border-radius: 20px;
     box-shadow: 5px 5px 25px black;
@@ -41,102 +45,126 @@ footer{
     overflow-x: hidden;
 }
 
-h2{
+h2 {
     text-align: center;
     color: white;
     border-bottom: 1px solid white;
     transition: 0.3s;
 }
-h2:hover{
+
+h2:hover {
     color: #41AFA4;
     border-bottom: 1px solid #41AFA4;
     transition: 0.5s;
 }
-#topChat{
+
+#topChat {
     background-color: #41AFA4;
     width: 100%;
     height: 90%;
 }
-#chatContact{
+
+#chatContact {
     background-color: #B6A9DA;
     width: 18%;
     height: 100%;
 }
 
-#chatBar{
+#chatBar {
     height: 10%;
     width: 100%;
 }
-#chatBtnBloc{
+
+#chatBtnBloc {
     height: 100%;
     width: 20%;
 }
-#chatBtnSend{
+
+#chatBtnSend {
     height: 100%;
     border: 1px solid black
 }
-#chatInput{
+
+#chatInput {
     width: 90%;
     resize: none;
 }
-#chatBloc{
-    border : 1px solid black
+
+#chatBloc {
+    border: 1px solid black
 }
-.noteEl{
+
+.noteEl {
     border: 1px solid black;
 }
-.notationBloc{
+
+.notationBloc {
     width: 30%;
     border-right: 1px solid black;
 }
-#notation{
+
+#notation {
     height: 50%;
     text-align: center;
     background-color: #A99BD4;
     color: white;
     border-bottom: 1px solid black;
 }
-#onTwenty{
+
+#onTwenty {
     height: 50%;
     text-align: center;
     color: white;
     background-color: #4F3B8A;
 }
-.prof{
+
+.prof {
     font-size: 0.8em;
 }
-.bg-egg{
+
+.bg-egg {
     background-color: #F6F4E4;
-}
-#hwDate{
-    width: 60px;
-    height: 50px;
-}
-#hwEl{
-    height: 50px;
-}
-.subInfo{
-    background-color: #4F3B8A;
-}
-/* PAGE note */
-table, td, th {
-    border: 1px solid #333;
-    
-    color: white;
-}
-table{
-    background-color: #F6F4E4;
-    
-}
-th{
-    background-color: #4F3B8A;
-    
 }
 
-td{
+#hwDate {
+    width: 60px;
+    padding: 15%;
+}
+
+#hwEl {
+    height: 50px;
+}
+
+.subInfo {
+    background-color: #4F3B8A;
+}
+
+/* PAGE note */
+table,
+td,
+th {
+    border: 1px solid #333;
+
+    color: white;
+}
+
+table {
+    background-color: #F6F4E4;
+
+}
+
+th {
+    background-color: #4F3B8A;
+
+}
+
+td {
     color: black;
     text-align: center;
     width: 50px;
     height: 50px;
 }
-tr:nth-child(even){background-color: #f2f2f2}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
