--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -26,6 +26,7 @@ header {
     background-color: #4F3B8A;
     border-radius: 20px;
     padding: 20px;
+    height: fit-content;
 }
 
 footer {
@@ -137,34 +138,4 @@ h2:hover {
 
 .subInfo {
     background-color: #4F3B8A;
-}
-
-/* PAGE note */
-table,
-td,
-th {
-    border: 1px solid #333;
-
-    color: white;
-}
-
-table {
-    background-color: #F6F4E4;
-
-}
-
-th {
-    background-color: #4F3B8A;
-
-}
-
-td {
-    color: black;
-    text-align: center;
-    width: 50px;
-    height: 50px;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2
 }
