--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -14,7 +14,7 @@ html {
 
 header {
     height: 10%;
-    background-color: #41AFA4;
+    background-color: #3498DB;
     color: white;
 }
 
@@ -23,7 +23,7 @@ header {
 }
 
 .navBtnMob {
-    background-color: #4F3B8A;
+    background-color: #3498DB;
     border-radius: 20px;
     padding: 20px;
     height: fit-content;
@@ -35,11 +35,11 @@ footer {
     bottom: 0;
     height: 10%;
     width: 100%;
-    background-color: #41AFA4;
+    background-color: #3498DB;
 }
 
 .resumeBloc {
-    background-color: #B6A9DA;
+    background-color: #1A5276;
     border-radius: 20px;
     box-shadow: 5px 5px 25px black;
     overflow: scroll;
@@ -54,19 +54,19 @@ h2 {
 }
 
 h2:hover {
-    color: #41AFA4;
-    border-bottom: 1px solid #41AFA4;
+    color: #3498DB;
+    border-bottom: 1px solid #3498DB;
     transition: 0.5s;
 }
 
 #topChat {
-    background-color: #41AFA4;
+    background-color: #3498DB;
     width: 100%;
     height: 90%;
 }
 
 #chatContact {
-    background-color: #B6A9DA;
+    background-color: #1A5276;
     width: 18%;
     height: 100%;
 }
@@ -95,6 +95,10 @@ h2:hover {
     border: 1px solid black
 }
 
+#chatMessage {
+    scroll-behavior: smooth;
+}
+
 .noteEl {
     border: 1px solid black;
 }
@@ -116,7 +120,7 @@ h2:hover {
     height: 50%;
     text-align: center;
     color: white;
-    background-color: #4F3B8A;
+    background-color: #2E4053;
 }
 
 .prof {
@@ -137,5 +141,9 @@ h2:hover {
 }
 
 .subInfo {
-    background-color: #4F3B8A;
+    background-color: #476686;
+}
+
+.meChat {
+    background-color: #2E4053;
 }
