--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -31,9 +31,10 @@ header {
 
 footer {
     margin-top: 50px;
+    padding: 10px;
     position: relative;
     bottom: 0;
-    height: 10%;
+    height: 15%;
     width: 100%;
     background-color: #3498DB;
 }
