--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -7,19 +7,21 @@
 body,
 html {
     background-color: #F6F4E4;
-    height: 100%;
+    height: 100vh;
     font-family: 'Roboto', sans-serif;
     position: relative;
 }
 
 header {
-    height: 10%;
+    height: 10vh;
     background-color: #3498DB;
     color: white;
 }
 
-.logoBloc {
-    width: 10%;
+main {
+    min-height: calc(100vh - 20vh);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .navBtnMob {
@@ -30,11 +32,8 @@ header {
 }
 
 footer {
-    margin-top: 50px;
     padding: 10px;
-    position: relative;
-    bottom: 0;
-    height: 15%;
+    height: 10vh;
     width: 100%;
     background-color: #3498DB;
 }
