--- a/public/css/register.css
+++ b/public/css/register.css
@@ -9,7 +9,7 @@ body {
 
 #connectBloc {
     border-radius: 40px;
-    background-color: #41AFA4;
+    background-color: #3498DB;
     box-shadow: 10px 10px 25px black;
     font-weight: bold;
 }
