--- a/public/css/agenda.css
+++ b/public/css/agenda.css
@@ -10,12 +10,18 @@
 
 html,
 body {
-    height: 100%;
-    background-color: wheat;
+    height: 100vh;
+    background-color: #F6F4E4;
 }
 
 h1 {
     text-align: center;
+}
+
+main {
+    min-height: calc(100vh - 20vh);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 td {
@@ -64,7 +70,6 @@ table {
 }
 
 .add {
-    height: 200px;
     margin-left: 20px;
     margin-top: 50px;
     display: flex;
